# git-prompt-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs
doc/: git-prompt.1
pkg/brew/: git-prompt-bin.rb
src/: app.rs  bench.rs  examples.rs  lib.rs  main.rs  model.rs  parse.rs  view.rs
