[package]
authors = ["Ignas Anikevicius <anikevicius@gmail.com>"]
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["git", "prompt", "async", "zsh", "bash"]
description = "A git prompt built for fast feedback"
license = "MIT"
name = "git-prompt"
readme = "./README.md"
version = "0.1.9996"
repository = "https://github.com/aignas/git-prompt-rs"
edition = "2018"

[[bin]]
name = "git-prompt"
path = "src/main.rs"

[build-dependencies]
clap = "2.33.0"
version_check = "0.9.1"

[dependencies]
git2 = "0.9.1"
ansi_term = "0.11"
[dependencies.clap]
features = ["suggestions", "color", "wrap_help"]
version = "2.33.0"
