[package]
authors = ["Ignas Anikevicius <anikevicius@gmail.com>"]
build = "build.rs"
categories = ["command-line-utilities"]
keywords = ["git", "prompt", "async", "zsh", "bash"]
description = "A git prompt built for fast feedback"
license = "MIT"
name = "git-prompt"
readme = "./README.md"
version = "0.3.0"
repository = "https://github.com/aignas/git-prompt-rs"
edition = "2018"

[lib]
name = "prompt"
path = "src/lib.rs"

[[bin]]
name = "git-prompt"
path = "src/main.rs"

[build-dependencies]
clap = "~3.0.0-beta.2"
clap_generate = "~3.0.0-beta.2"
version_check = "0.9.1"

[dependencies]
git2 = "0.13.0"
ansi_term = "0.12"
[dependencies.clap]
features = ["suggestions", "color", "wrap_help"]
version = "~3.0.0-beta.2"

# TODO @aignas (2019-06-11): We depend on criterion.rs for bench,
# stabilization of the bench macro:
# https://github.com/rust-lang/rust/issues/29553
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
path = "src/bench.rs"
harness = false
